[gd_scene load_steps=26 format=2]

[ext_resource path="res://resources/tile/floor.tres" type="TileSet" id=1]
[ext_resource path="res://resources/tile/normal_size_decoration.tres" type="TileSet" id=2]
[ext_resource path="res://scripts/env/background.gd" type="Script" id=3]
[ext_resource path="res://assets/font/thaleah_fat.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/game_menu/initial_screen.gd" type="Script" id=5]
[ext_resource path="res://scenes/env/dawn_mask.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/env/animated_light.tscn" type="PackedScene" id=7]
[ext_resource path="res://resources/player/blue_char.tres" type="Texture" id=8]
[ext_resource path="res://resources/player/red_char.tres" type="Texture" id=9]
[ext_resource path="res://resources/player/green_char.tres" type="Texture" id=10]
[ext_resource path="res://resources/player/purple_char.tres" type="Texture" id=11]
[ext_resource path="res://scripts/game_menu/initial_container.gd" type="Script" id=12]
[ext_resource path="res://scripts/game_menu/select_character.gd" type="Script" id=13]
[ext_resource path="res://assets/tile/parallax_background/layer_3.png" type="Texture" id=14]
[ext_resource path="res://assets/tile/parallax_background/layer_4.png" type="Texture" id=15]
[ext_resource path="res://assets/tile/parallax_background/layer_2.png" type="Texture" id=16]
[ext_resource path="res://assets/tile/parallax_background/layer_1.png" type="Texture" id=17]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("InitialContainer/GameName:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("InitialContainer/ButtonsContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("InitialContainer/GameName:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HContainer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("InitialContainer/ButtonsContainer:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("InitialContainer/GameName:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 10, 10 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SelectCharacter/CharacterSelectContainer:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("SelectCharacter/CharacterSelectContainer:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("SelectCharacter/Text:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("SelectCharacter/Text:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
resource_name = "character_select"
tracks/0/type = "value"
tracks/0/path = NodePath("InitialContainer/ButtonsContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("InitialContainer/ButtonsContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("InitialContainer/GameName:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 10 ), Vector2( 76, 10 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SelectCharacter/CharacterSelectContainer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SelectCharacter/CharacterSelectContainer:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SelectCharacter/Text:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SelectCharacter/Text:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "show_container"
tracks/0/type = "value"
tracks/0/path = NodePath("InitialContainer/GameName:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("InitialContainer/ButtonsContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("InitialContainer/ButtonsContainer:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="DynamicFont" id=5]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="Environment" id=8]
background_mode = 4
glow_enabled = true
glow_hdr_threshold = 1.5

[node name="InitialScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )

[node name="ScreenDesign" type="Node2D" parent="."]

[node name="Terrain" type="Node2D" parent="ScreenDesign"]

[node name="Terrain1" type="TileMap" parent="ScreenDesign/Terrain"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 393215, 0, 0, 327680, 0, 1, 327681, 0, 1, 327682, 0, 1, 327683, 0, 1, 327684, 0, 1, 327685, 0, 1, 327686, 0, 1, 327687, 0, 1, 327688, 0, 1, 327689, 0, 1, 327690, 0, 2, 458751, 0, 131072, 393216, 0, 131073, 393217, 0, 131073, 393218, 0, 131073, 393219, 0, 131073, 393220, 0, 131073, 393221, 0, 131073, 393222, 0, 131073, 393223, 0, 131073, 393224, 0, 131073, 393225, 0, 131073, 393226, 0, 131074 )

[node name="Decoration" type="Node2D" parent="ScreenDesign"]

[node name="Decoration" type="TileMap" parent="ScreenDesign/Decoration"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 196615, 7, 0, 262145, 2, 0, 262147, 2, 0, 262149, 4, 0 )

[node name="Background" type="ParallaxBackground" parent="."]
script = ExtResource( 3 )
can_process = true
layer_speed = [ 20, 15, 10, 5 ]

[node name="Layer4" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2( 0.05, 1 )
motion_mirroring = Vector2( 320, 180 )

[node name="Texture" type="TextureRect" parent="Background/Layer4"]
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 15 )

[node name="Layer3" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2( 0.05, 1 )
motion_mirroring = Vector2( 320, 0 )

[node name="Texture" type="TextureRect" parent="Background/Layer3"]
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 17 )

[node name="Layer2" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2( 0.1, 1 )
motion_mirroring = Vector2( 320, 0 )

[node name="Texture" type="TextureRect" parent="Background/Layer2"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 16 )

[node name="Layer1" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2( 0.2, 1 )
motion_mirroring = Vector2( 320, 0 )

[node name="Texture" type="TextureRect" parent="Background/Layer1"]
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 14 )

[node name="Mask" parent="Background" instance=ExtResource( 6 )]
color = Color( 0.333333, 0.333333, 0.333333, 1 )

[node name="GameMenu" type="CanvasLayer" parent="."]

[node name="InitialContainer" type="Control" parent="GameMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 12 )
animation = NodePath("../Animation")

[node name="GameName" type="Label" parent="GameMenu/InitialContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 10.0
margin_top = 10.0
margin_right = 178.0
margin_bottom = 40.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 2 )
text = "Dawn Forest"
valign = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="GameMenu/InitialContainer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 15.0
margin_top = 40.0
margin_right = 85.0
margin_bottom = 100.0
custom_constants/separation = 0

[node name="Play" type="Button" parent="GameMenu/InitialContainer/ButtonsContainer"]
margin_right = 70.0
margin_bottom = 20.0
rect_min_size = Vector2( 70, 20 )
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Text" type="Label" parent="GameMenu/InitialContainer/ButtonsContainer/Play"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.0
margin_top = -7.5
margin_right = 34.0
margin_bottom = 7.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 1 )
text = "Play Game"
valign = 1

[node name="Options" type="Button" parent="GameMenu/InitialContainer/ButtonsContainer"]
margin_top = 20.0
margin_right = 70.0
margin_bottom = 40.0
rect_min_size = Vector2( 70, 20 )
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Text" type="Label" parent="GameMenu/InitialContainer/ButtonsContainer/Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.0
margin_top = -7.5
margin_right = 34.0
margin_bottom = 7.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 1 )
text = "Options"
valign = 1

[node name="Quit" type="Button" parent="GameMenu/InitialContainer/ButtonsContainer"]
margin_top = 40.0
margin_right = 70.0
margin_bottom = 60.0
rect_min_size = Vector2( 70, 20 )
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Text" type="Label" parent="GameMenu/InitialContainer/ButtonsContainer/Quit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.0
margin_top = -7.5
margin_right = 34.0
margin_bottom = 7.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 1 )
text = "Quit"
valign = 1

[node name="SelectCharacter" type="Control" parent="GameMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 13 )

[node name="CharacterSelectContainer" type="HBoxContainer" parent="GameMenu/SelectCharacter"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = -40.0
margin_right = 118.0
margin_bottom = 40.0

[node name="Blue" type="VBoxContainer" parent="GameMenu/SelectCharacter/CharacterSelectContainer"]
margin_right = 56.0
margin_bottom = 80.0

[node name="Texture" type="TextureRect" parent="GameMenu/SelectCharacter/CharacterSelectContainer/Blue"]
margin_right = 56.0
margin_bottom = 56.0
texture = ExtResource( 8 )

[node name="Blue" type="Button" parent="GameMenu/SelectCharacter/CharacterSelectContainer/Blue"]
margin_top = 60.0
margin_right = 56.0
margin_bottom = 80.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Text" type="Label" parent="GameMenu/SelectCharacter/CharacterSelectContainer/Blue/Blue"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.5
margin_right = 20.0
margin_bottom = 7.5
custom_fonts/font = SubResource( 10 )
text = "Blue"
align = 1
valign = 1

[node name="Red" type="VBoxContainer" parent="GameMenu/SelectCharacter/CharacterSelectContainer"]
margin_left = 60.0
margin_right = 116.0
margin_bottom = 80.0

[node name="Texture" type="TextureRect" parent="GameMenu/SelectCharacter/CharacterSelectContainer/Red"]
margin_right = 56.0
margin_bottom = 56.0
texture = ExtResource( 9 )

[node name="Red" type="Button" parent="GameMenu/SelectCharacter/CharacterSelectContainer/Red"]
margin_top = 60.0
margin_right = 56.0
margin_bottom = 80.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Text" type="Label" parent="GameMenu/SelectCharacter/CharacterSelectContainer/Red/Red"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.5
margin_right = 20.0
margin_bottom = 7.5
custom_fonts/font = SubResource( 10 )
text = "Red"
align = 1
valign = 1

[node name="Green" type="VBoxContainer" parent="GameMenu/SelectCharacter/CharacterSelectContainer"]
margin_left = 120.0
margin_right = 176.0
margin_bottom = 80.0

[node name="Texture" type="TextureRect" parent="GameMenu/SelectCharacter/CharacterSelectContainer/Green"]
margin_right = 56.0
margin_bottom = 56.0
texture = ExtResource( 10 )

[node name="Green" type="Button" parent="GameMenu/SelectCharacter/CharacterSelectContainer/Green"]
margin_top = 60.0
margin_right = 56.0
margin_bottom = 80.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Text" type="Label" parent="GameMenu/SelectCharacter/CharacterSelectContainer/Green/Green"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.5
margin_right = 20.0
margin_bottom = 7.5
custom_fonts/font = SubResource( 10 )
text = "Green"
align = 1
valign = 1

[node name="Purple" type="VBoxContainer" parent="GameMenu/SelectCharacter/CharacterSelectContainer"]
margin_left = 180.0
margin_right = 236.0
margin_bottom = 80.0

[node name="Texture" type="TextureRect" parent="GameMenu/SelectCharacter/CharacterSelectContainer/Purple"]
margin_right = 56.0
margin_bottom = 56.0
texture = ExtResource( 11 )

[node name="Purple" type="Button" parent="GameMenu/SelectCharacter/CharacterSelectContainer/Purple"]
margin_top = 60.0
margin_right = 56.0
margin_bottom = 80.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Text" type="Label" parent="GameMenu/SelectCharacter/CharacterSelectContainer/Purple/Purple"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -7.5
margin_right = 24.0
margin_bottom = 7.5
custom_fonts/font = SubResource( 10 )
text = "Purple"
align = 1
valign = 1

[node name="Text" type="Label" parent="GameMenu/SelectCharacter"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -37.0
margin_right = 96.0
margin_bottom = -22.0
custom_fonts/font = SubResource( 10 )
text = "Please Select a Character"
align = 1
valign = 1

[node name="Animation" type="AnimationPlayer" parent="GameMenu"]
anims/RESET = SubResource( 4 )
anims/character_select = SubResource( 9 )
anims/show_container = SubResource( 3 )

[node name="HContainer" type="HBoxContainer" parent="GameMenu"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -58.5
margin_top = -11.0
margin_right = 58.5
margin_bottom = -3.0
custom_constants/separation = 2

[node name="MadeBy" type="Label" parent="GameMenu/HContainer"]
margin_right = 27.0
margin_bottom = 8.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 5 )
text = "Made By"
align = 1
valign = 1

[node name="Dev" type="Label" parent="GameMenu/HContainer"]
margin_left = 29.0
margin_right = 71.0
margin_bottom = 8.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 5 )
text = "DevBandeira"
valign = 1

[node name="Version" type="Label" parent="GameMenu/HContainer"]
margin_left = 73.0
margin_right = 117.0
margin_bottom = 8.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 5 )
text = "- Version 0.1"
valign = 1

[node name="Mask" parent="." instance=ExtResource( 6 )]
color = Color( 0.333333, 0.333333, 0.333333, 1 )

[node name="Light" parent="." instance=ExtResource( 7 )]
position = Vector2( 234, 123 )

[node name="GlowEnv" type="WorldEnvironment" parent="."]
environment = SubResource( 8 )

[connection signal="animation_finished" from="GameMenu/Animation" to="." method="on_animation_finished"]
